// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummery correctly with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h2>
</div>
`;

exports[`should render ExpensesSummery correctly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    54
     
    expenses
     totalling 
    $2,322.35
  </h2>
</div>
`;
